--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,9 +84,9 @@
       <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
         <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span>
 
-        {{comment.upvotes}} - by {{comment.author}}
+        {{comment.upvotes}} - {{comment.author}} - 
 
-        <span style="font-size:20px; margin-left:10px;">
+        <span style="font-size:20px; margin-left:5px;">
           {{comment.body}}
         </span>
       </div>
@@ -126,7 +126,7 @@
             ng-model="user.username"></input>
         </div>
         <div class="form-group">
-          <input type="text"
+          <input type="password"
             class="form-control"
             placeholder="Password"
             ng-model="user.password"></input>
