--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="/javascripts/angularApp.js"></script>
-    <style> .glpyicon-thumbs-up { cursor:pointer } </style>
+    <style> .glyphicon-thumbs-up { cursor:pointer } .glyphicon-thumbs-down { cursor:pointer } </style>
   </head>
 
   <body ng-app="flapperNews">
@@ -34,6 +34,7 @@
       <div ng-repeat="post in posts | orderBy: '-upvotes'">
         <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
         {{post.upvotes}}
+        <span class="glyphicon glyphicon-thumbs-down" ng-click="decrementUpvotes(post)"></span>
 
         <span style="font-size:20px; margin-left:10px;">
           <a ng-show="post.link" href="{{post.link}}">
@@ -85,7 +86,11 @@
       <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
         <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span>
 
-        {{comment.upvotes}} - {{comment.author}} - 
+        {{comment.upvotes}}
+
+        <span class="glyphicon glyphicon-thumbs-down" ng-click="decrementUpvotes(comment)"></span>
+
+        - {{comment.author}} - 
 
         <span style="font-size:20px; margin-left:5px;">
           {{comment.body}}
